# gitmate

./: .gitignore  README.md  config.yaml  git_info.json  git_probes.py  main.py  prompt.md  pyproject.toml  repo_status.yaml  test.py
conversations/: conversation_20251004_162548.yaml
lib/: connect_with_SLM.py  load_conversation.py  save_conversation.py
prompts/: context_aware_prompt.md
src/: main.py
src/gitmate/: CLI.py  anwser.py  config.py  git_probes.py  interactive.py  load_user_config.py  main.py  postprocess.py  setup.py  system_config.py
src/gitmate/lib/: anwser.py  git_probes.py  history.py  intent_definitions.yaml  intent_utils.py  postprocess.py  service.py  user_config.py  user_intents.yaml
src/gitmate/prompts/: context_aware_prompt.md  intent_detection.md  intent_recognition_prompt.md
src/gitmate/test/: README.md  __init__.py  conftest.py  expected_outputs.yaml  expected_outputs_new.yaml  report_generator.py  run_evaluation.py  test_scenarios.py  user_intents.yaml
src/gitmate/test/git_contexts/: detached_head.yaml  no_remote.yaml  no_repo.yaml  no_upstream.yaml  normal_noremote_partial.yaml  normal_noremote_staged.yaml  normal_noremote_unstaged.yaml  normal_remote_clean.yaml  normal_remote_partial.yaml  normal_remote_staged.yaml  normal_remote_unstaged.yaml
