[project]
name = "gitmate"
version = "0.2.0"
description = "This local language model would read through the git repo info , and suggest the git command for you "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dulwich>=0.24.2",
    "lmstudio>=1.5.0",
    "pip>=25.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]
[project.scripts]
gitmate = "src.main:main"