[project]
name = "gitmate"
version = "0.2.0"
description = "This local language model would read through the git repo info , and suggest the git command for you "
authors = [
  { name="Jiale Li", email="lijiale77kl@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dulwich>=0.24.2",
    "lmstudio>=1.5.0",
    "pip>=25.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]
[build-system]
requires = ["uv_build >= 0.8.17, <0.9.0"]
build-backend = "uv_build"

[project.scripts]
gitmate = "gitmate.main:main"